<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CLWhole"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ScrollView
        android:id="@+id/SV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CLScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/TVPhone"
            app:layout_constraintTop_toBottomOf="@+id/TVPhone">

            <TextView
                android:id="@+id/TVPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETEmail" />

            <ImageView
                android:id="@+id/IVProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="94dp"
                android:layout_marginLeft="94dp"
                android:layout_marginBottom="17dp"
                android:src="@drawable/default_profile"
                app:layout_constraintBottom_toTopOf="@+id/TVName"
                app:layout_constraintStart_toStartOf="@+id/TVName" />

            <TextView
                android:id="@+id/textViewClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="17dp"
                android:text="@string/student_class"
                app:layout_constraintBottom_toTopOf="@+id/ETClass"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/BNCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:onClick="cancelButtonClicked"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/BNRecordSave"
                app:layout_constraintTop_toBottomOf="@+id/ETMajor" />

            <TextView
                android:id="@+id/TVProfilePhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ETEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:ems="10"
                android:hint="@string/your_email_here"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVEmail" />

            <TextView
                android:id="@+id/TVEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETName" />

            <Button
                android:id="@+id/BNChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="73dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="65dp"
                android:onClick="changeButtonClicked"
                android:text="@string/change"
                app:layout_constraintBottom_toTopOf="@+id/TVName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TVGender"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="13dp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETPhone" />

            <EditText
                android:id="@+id/ETPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/your_phone_number_here"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVPhone" />

            <TextView
                android:id="@+id/TVName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="186dp"
                android:layout_weight="1"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TVMajor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/major"
                app:layout_constraintStart_toStartOf="@+id/ETMajor"
                app:layout_constraintTop_toBottomOf="@+id/ETClass" />

            <EditText
                android:id="@+id/ETClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="126dp"
                android:ems="10"
                android:hint="@string/e_g_2021"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETPhone" />

            <EditText
                android:id="@+id/ETMajor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/your_major_here"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVMajor" />

            <EditText
                android:id="@+id/ETName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/your_name_here"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVName" />

            <Button
                android:id="@+id/BNRecordSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:onClick="saveButtonClicked"
                android:text="@string/save"
                app:layout_constraintEnd_toStartOf="@+id/BNCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETMajor" />

            <RadioGroup
                android:id="@+id/RGGender"
                android:layout_width="409dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/ETClass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETPhone">

                <RadioButton
                    android:id="@+id/RBNFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/RBNMale"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/male" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>