<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/TVInputType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_type" />

    <Spinner
        android:id="@+id/SPInputType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/input_type_array" />

    <TextView
        android:id="@+id/TVActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type" />

    <Spinner
        android:id="@+id/SPActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/activity_type_array" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="99dp" />

        <Button
            android:id="@+id/BNStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/start" />

    <Button
        android:id="@+id/BNSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/sync" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>